p.main-menu-body added bottom-border-style dotted

--- a/astrogrid/portal/site/web/style/css/astrogrid.css
+++ b/astrogrid/portal/site/web/style/css/astrogrid.css
@@ -66,6 +66,11 @@ p.main-menu-header
 p.main-menu-body
 {
   /*
+    Borders.
+    */
+  border-bottom-style:    dotted;
+
+  /*
     Fonts.
     */
   font-family:            arial, "lucida console", sans-serif;
