--- a/astrogrid/portal/myspace/site/web/style/css/xmlTree.css
+++ b/astrogrid/portal/myspace/site/web/style/css/xmlTree.css
@@ -1,19 +1,17 @@
 body{
-  font: 10pt Verdana,sans-serif;
   color: navy;
 }
 .trigger{
   cursor: pointer;
   cursor: hand;
-  display: block;
+/*  display: block; */
 }
 .branch{
   display: none;
   margin-left: 16px;
 }
-a{
-  text-decoration: none;
+.document{
+  cursor: pointer;
+  cursor: hand;
 }
-a:hover{
-  text-decoration: underline;
-}
+
