--- a/astrogrid/jes/src/java/org/astrogrid/jes/component/production/package.html
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/component/production/package.html
@@ -1,5 +1,10 @@
 <html>
 	<body>
-		<h1>Production-version of component manager.</h1>
+		<h1>Production System implementation of Component Manager.</h1>
+		{@link org.astrogrid.jes.component.production.ProductionComponentManager} is a full-featured component manager that creates a varying
+		set of components, depending on properties set in the system configuration.
+		<p/>
+		Configuration of individual component implementations is done by helper components, defined in this package.
+		They've all got a name like <tt>*FromConfig</tt>
 	</body>
 </html>
